@@ -1,4 +1,5 @@
 0.05
+ - Update Module::Install to 1.16 version.
 
 0.04 2014-11-26T00:02:55+01:00
  - Add README file.
